[package]
name = "madnes"
authors = ["John Stark"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "madnes"
path = "src/main.rs"

[lib]
name = "madnes"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.5.0"
bitflags = "2.6.0"
sdl2 = { version = "0.37", features = ["image", "ttf"] }
clap = { version = "4.0", features = ["derive"] }